--- a/ShopingCart/build.xml
+++ b/ShopingCart/build.xml
@@ -24,9 +24,9 @@
 
 
 <path id="NecessaryLibraries">
-        <pathelement location="./src/MyLib/junit-4.12.jar"/>
+        <pathelement location="./MyLib/junit-4.12.jar"/>
         <!--matcher-->
-        <pathelement location="./src/MyLib/hamcrest-core-1.3.jar"/>
+        <pathelement location="./MyLib/hamcrest-core-1.3.jar"/>
         <!--<pathelement location="./UsedLibraries/jacocoant.jar"/>-->
     </path>
     
